Absolute paths have been removed from the solution

--- a/ImageProcessingApp/PropertySheet.props
+++ b/ImageProcessingApp/PropertySheet.props
@@ -5,11 +5,12 @@
   <PropertyGroup />
   <ItemDefinitionGroup>
     <ClCompile>
-      <AdditionalIncludeDirectories>C:\Users\Santiago\Documents\GitHub\ImageProcessing\ImageProcessingLib;C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\opencv_2_4_10\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)ImageProcessingLib;$(SolutionDir)external\opencv_2_4_10\include</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <AdditionalLibraryDirectories>C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\opencv_2_4_10\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)external\opencv_2_4_10\lib</AdditionalLibraryDirectories>
+      <AdditionalDependencies>
+      </AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
