--- a/ImageProcessingLib/ImageProcessingLib.vcxproj
+++ b/ImageProcessingLib/ImageProcessingLib.vcxproj
@@ -49,7 +49,7 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\leptonica_1_68\include\leptonica;C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\tesseract_3_02\include\tesseract;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)external\leptonica_1_68\include\leptonica;$(SolutionDir)external\tesseract_3_02\include\tesseract;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -65,7 +65,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;NDEBUG;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\leptonica_1_68\include\leptonica;C:\Users\Santiago\Documents\GitHub\ImageProcessing\external\tesseract_3_02\include\tesseract;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)external\leptonica_1_68\include\leptonica;$(SolutionDir)external\tesseract_3_02\include\tesseract;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
