added lib files, fix split data method

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,4 @@ ImageProcessing.v11.suo
 /ImageProcessingApp/Release
 /ImageProcessingLib/Release
 /ImageProcessingLib/ImageProcessingLib.vcxproj.user
+/ImageProcessingApp/ImageProcessingApp.vcxproj.user
