--- a/ImageProcessingApp/ImageProcessingApp.vcxproj
+++ b/ImageProcessingApp/ImageProcessingApp.vcxproj
@@ -54,13 +54,13 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <AdditionalIncludeDirectories>$(SolutionDir)external\leptonica_1_68\include\leptonica;$(SolutionDir)external\tesseract_3_02\include\tesseract;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)external\leptonica_1_68\include\leptonica;$(SolutionDir)external\tesseract_3_02\include\tesseract;$(SolutionDir)external\opencv_2_4_10\include\opencv2;..\ImageProcessingLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>ImageProcessingLib.lib;opencv_core2410d.lib;opencv_highgui2410d.lib;opencv_imgproc2410d.lib;opencv_objdetect2410d.lib;libtesseract302.lib;liblept168.lib</AdditionalDependencies>
-      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)external\tesseract_3_02\lib;$(SolutionDir)external\leptonica_1_68\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)$(Configuration);$(SolutionDir)external\tesseract_3_02\lib;$(SolutionDir)external\leptonica_1_68\lib;$(SolutionDir)external\opencv_2_4_10\lib;..\ImageProcessingLib\Debug;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
