Added Template entity with 2 kinds of passport

--- a/ImageProcessingLib/ImageProcessingLib.vcxproj.filters
+++ b/ImageProcessingLib/ImageProcessingLib.vcxproj.filters
@@ -21,9 +21,18 @@
     <ClInclude Include="ImageProcessing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IdentityDocument.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Template.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageProcessing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Template.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
