--- a/ImageProcessingLib/ImageProcessingLib.vcxproj
+++ b/ImageProcessingLib/ImageProcessingLib.vcxproj
@@ -80,9 +80,11 @@
   <ItemGroup>
     <ClInclude Include="IdentityDocument.h" />
     <ClInclude Include="ImageProcessing.h" />
+    <ClInclude Include="Template.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageProcessing.cpp" />
+    <ClCompile Include="Template.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
