--- a/ImageProcessingLib/ImageProcessingLib.vcxproj.filters
+++ b/ImageProcessingLib/ImageProcessingLib.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClInclude Include="ImageProcessing.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IdentityDocument.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ImageProcessing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="IdentityDocument.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
